# jax-ldt

./: .gitignore  GAPS.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
docs/: active_learning.md  algorithm.md  benchmarks.md  discopt_integration.md  index.md  mip_export.md  quickstart.md  uncertainty.md
examples/: 01_quickstart.ipynb  02_uncertainty.ipynb  03_active_learning.ipynb  04_mip_optimization.ipynb  05_onnx_export.ipynb  06_steam_tables.ipynb  _make_notebooks.py
src/jax_ldt/: __init__.py  _types.py  _validation.py  hyperplane_tree.py  hyperplanes.py  linear_regression.py  linear_tree.py  losses.py  sklearn_compat.py  tree_core.py  viz.py
src/jax_ldt/active_learning/: __init__.py  acquisitions.py  batching.py  loop.py
src/jax_ldt/export/: __init__.py  discopt_adapter.py  onnx_export.py  spec.py
src/jax_ldt/uncertainty/: __init__.py  conformal.py  linprop.py  metrics.py  quadratic.py
tests/: conftest.py  test_acquisitions.py  test_active_learning.py  test_categorical_features.py  test_conformal.py  test_discopt_adapter.py  test_edge_cases.py  test_export_json.py  test_export_onnx.py  test_hyperplane_tree.py  test_hyperplanes.py  test_linear_regression.py  test_linear_tree.py  test_losses.py  test_min_impurity_decrease.py  test_multitarget.py  test_parity_vs_pytorch.py  test_performance.py  test_principled_choices.py  test_sklearn_compat.py  test_smoke_coverage.py  test_tree_core.py  test_uncertainty.py  test_validation.py  test_viz.py
tests/_reference/: __init__.py
